kustomize/overlays/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riversong-backend
spec:
  selector:
    matchLabels:
      app: riversong-backend
  template:
    metadata:
      labels:
        app: riversong-backend
    spec:
      containers:
        - name: backend
          image: proxyfil/riversong-back:stable
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /usr/src/app/uploads
          livenessProbe:
            httpGet:
              path: /docs
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: riversong-uploads-pvc
