kustomize/overlays/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riversong-frontend
spec:
  selector:
    matchLabels:
      app: riversong-frontend
  template:
    metadata:
      labels:
        app: riversong-frontend
    spec:
      containers:
        - name: frontend
          image: proxyfil/riversong-front:stable
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
